--- a/index.html
+++ b/index.html
@@ -479,7 +479,7 @@
     <div style="width: 100%;" class="text-center">
     <div class="font-latin color-accent h4 mb-2 editable animate__animated animate__fadeInDown animate__slower" style="font-size: 28.8px;">Filter Instagram</div>
 <div style="
-    display: flex;
+    display: ;
     gap: 10px;
 ">
  <img src="img/BS (246 of 508).jpg" style="width: 100%;height: 100%;object-fit: cover;border-radius: 250px 250px 0 0;" draggable="false">
@@ -640,7 +640,7 @@
                                                 <hr style="margin-top: 1rem; margin-bottom: 1rem; border: 0; border-top: 2px dashed rgba(0,0,0,.1);">
                                                                         <div style="margin-bottom: 10px">
                             <div style="color: #b2b2b2;">Nama</div>
-                            <div>Nama Tamu</div>
+                            <div>Wildan</div>
                         </div>
                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                     </div>
                     <button onclick="closeModal(qrModal)" type="button" class="btn btn-close"><svg
@@ -653,32 +653,111 @@
             </div>
         </div>
         <!-- endQRModal -->
-        <!-- startRSVPModal -->
-        <div class="modal fade" id="rsvpModal" tabindex="-1" role="dialog" aria-labelledby="rsvpModal"
-        aria-hidden="true">
-        <div class="modal-dialog modal-dialog-centered">
-            <div class="modal-content p-4" style="height:100%">
-                <!-- rsvp form -->
-                                    <div class="rsvp-form p-3 d-flex flex-column align-items-center justify-content-center"
-                    style="height: 100%">
-                    <div class="mb-3 text-center">
-                        <svg xmlns="http://www.w3.org/2000/svg" height="90" width="90" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2"><path stroke-linecap="round" stroke-linejoin="round" d="M18.364 18.364A9 9 0 0 0 5.636 5.636m12.728 12.728A9 9 0 0 1 5.636 5.636m12.728 12.728L5.636 5.636"/></svg>
-                        <h2 class="mb-3 h3 font-weight-bold">Fitur RSVP Belum Diaktifkan</h2>
-                        <p>Aktifkan terlebih dahulu agar dapat menampilkan form RSVP. Klik menu RSVP di halaman edit
-                            undangan lalu pada bagian pengaturan klik Aktifkan.</p>
-                    </div>
+      <!-- startRSVPModal -->
+<div class="modal fade" id="rsvpModal" tabindex="-1" role="dialog" aria-labelledby="rsvpModal" aria-hidden="true">
+    <style>
+          /* CSS for RSVP Modal */
+.modal-content {
+  border-radius: 10px;
+}
+
+.modal-dialog {
+  max-width: 500px;
+}
+
+.form-label {
+  font-weight: bold;
+}
+
+.btn-close {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+}
+
+/* Optional: Customize colors or other styles */
+.btn-troll {
+  background-color: #007bff; /* Blue color */
+  border-color: #007bff;
+}
+
+.btn-primary:hover {
+  background-color: #0056b3; /* Darker blue color on hover */
+  border-color: #0056b3;
+}
+
+.btn-secondary {
+  background-color: #6c757d; /* Gray color */
+  border-color: #6c757d;
+}
+
+.btn-secondary:hover {
+  background-color: #5a6268; /* Darker gray color on hover */
+  border-color: #545b62;
+}
+
+/* Optional: Customize modal overlay */
+.modal-backdrop {
+  background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent black */
+}
+
+    </style>
+    <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content p-4">
+            <!-- rsvp form -->
+            <form id="myForm">
+                <div class="mb-3">
+                    <label for="nama" class="form-label">Nama:</label>
+                    <input type="text" class="form-control" id="nama" name="nama" required>
                 </div>
-                                    <!-- rsvp form -->
-                <button onclick="closeModal(rsvpModal)" type="button" class="btn btn-close"><svg
-                        xmlns="http://www.w3.org/2000/svg" height="42px" width="42px" fill="none"
-                        viewBox="0 0 24 24" stroke="currentColor">
-                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                            d="M6 18 18 6M6 6l12 12" />
-                    </svg></button>
-            </div>
+                <div class="mb-3">
+                    <label for="alamat" class="form-label">Alamat:</label>
+                    <input type="text" class="form-control" id="alamat" name="alamat" required>
+                </div>
+                <div class="mb-3">
+                    <label for="kehadiran" class="form-label">Kehadiran:</label>
+                    <select class="form-select" id="kehadiran" name="kehadiran" required>
+                        <option value="hadir">Hadir</option>
+                        <option value="tidak_hadir">Tidak Hadir</option>
+                        <option value="sakit">Sakit</option>
+                    </select>
+                </div>
+                <div class="mb-3">
+                    <label for="pesan" class="form-label">Kesan dan Pesan:</label>
+                    <textarea class="form-control" id="pesan" name="pesan" rows="4" required></textarea>
+                </div>
+                <button type="submit" class="btn btn-troll">Submit</button>
+            </form>
+            <!-- rsvp form -->
+            <button onclick="closeModal('rsvpModal')" type="button" class="btn btn-secondary btn-close" data-bs-dismiss="modal">
+                <svg xmlns="http://www.w3.org/2000/svg" height="42px" width="42px" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18 18 6M6 6l12 12" />
+                </svg>
+            </button>
         </div>
     </div>
-    <!-- endRSVPModal -->
+</div>
+<!-- endRSVPModal -->
+<script>
+    function kirimData() {
+      var namaValue = document.getElementById("Nama").value.replace(/\s/g, "+");
+      var kelasValue = document.getElementById("Alamat").value.replace(/\s/g, "+");
+      var noHpValue = document.getElementById("Kehadiran").value.replace(/\s/g, "+");
+      var visiValue = document.getElementById("KesanPesan").value.replace(/\s/g, "+");
+      var formURL = "https://docs.google.com/forms/d/e/1FAIpQLSe1Jq4hq7EIfqOjkIdn6ur9JiXBB0Uxao9b7zZWSMhDtWXchA/viewform?usp=sf_link";
+      formURL += "&entry.1974313590=" + NamaValue;
+      formURL += "&entry.986576144=" + AlamatValue;
+      formURL += "&entry.1941511246=" + KehadiranValue;
+      formURL += "&entry.923789255=" + KesanPesanValue;
+      var xhr = new XMLHttpRequest();
+      xhr.open("POST", formURL, true);
+      xhr.send();
+      document.getElementById("Nama").value = '';
+      document.getElementById("Alamat").value = '';
+      document.getElementById("Kehadiran").value = '';
+      document.getElementById("KesanPesan").value = '';
+    }
+  </script>
         <!-- endRSVPModal -->
             </main>
     <!-- illegal -->
