--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                                         </div>
                                     </li>
                                                                         <li class="satumomen_slide">
-                                        <div class="container-mobile " style="background-image: url(https://satumomen.com/themes/red-rustic/bg.jpg); ;">
+                                        <div class="container-mobile " style="background-image: url(img/bg.jpg); ;">
                                             <div class="frame">
                                                 <img class="frame-tl animate__animated animate__fadeInTopLeft animate__slow" src="img/frame-tl.png" alt="frame">
                                                 <img class="frame-tr animate__animated animate__fadeInTopRight animate__slow" src="img/frame-tr.png" alt="frame">
@@ -179,7 +179,7 @@
                                         </div>
                                     </li>
                                                                         <li class="satumomen_slide">
-                                        <div class="container-mobile " style="background-image: url(https://satumomen.com/themes/red-rustic/bg.jpg); ;">
+                                        <div class="container-mobile " style="background-image: url(img/bg.jpg); ;">
                                             <div class="frame">
                                                 <img class="frame-tl animate__animated animate__fadeInTopLeft animate__slow" src="img/frame-tl.png" alt="frame">
                                                 <img class="frame-tr animate__animated animate__fadeInTopRight animate__slow" src="img/frame-tr.png" alt="frame">
@@ -210,7 +210,7 @@
                                         </div>
                                     </li>
                                                                         <li class="satumomen_slide">
-                                        <div class="container-mobile " style="background-image: url(https://satumomen.com/themes/red-rustic/bg.jpg); ;">
+                                        <div class="container-mobile " style="background-image: url(img/bg.jpg); ;">
                                             <div class="frame">
                                                 <img class="frame-tl animate__animated animate__fadeInTopLeft animate__slow" src="img/frame-tl.png" alt="frame">
                                                 <img class="frame-tr animate__animated animate__fadeInTopRight animate__slow" src="img/frame-tr.png" alt="frame">
@@ -240,7 +240,7 @@
                                         </div>
                                     </li>
                                                                         <li class="satumomen_slide">
-                                        <div class="container-mobile " style="background-image: url(https://satumomen.com/themes/red-rustic/bg.jpg); ;">
+                                        <div class="container-mobile " style="background-image: url(img/bg.jpg); ;">
                                             <div class="frame">
                                                 <img class="frame-tl animate__animated animate__fadeInTopLeft animate__slow" src="img/frame-tl.png" alt="frame">
                                                 <img class="frame-tr animate__animated animate__fadeInTopRight animate__slow" src="img/frame-tr.png" alt="frame">
@@ -267,7 +267,7 @@
                                         </div>
                                     </li>
                                                                         <li class="satumomen_slide">
-                                        <div class="container-mobile " style="background-image: url(https://satumomen.com/themes/red-rustic/bg.jpg); ;">
+                                        <div class="container-mobile " style="background-image: url(img/bg.jpg); ;">
                                             <div class="frame">
                                                 <img class="frame-tl animate__animated animate__fadeInTopLeft animate__slow" src="img/frame-tl.png" alt="frame">
                                                 <img class="frame-tr animate__animated animate__fadeInTopRight animate__slow" src="img/frame-tr.png" alt="frame">
@@ -308,7 +308,7 @@
                                         </div>
                                     </li>
                                                                         <li class="satumomen_slide">
-                                        <div class="container-mobile " style="background-image: url(https://satumomen.com/themes/red-rustic/bg.jpg); ;">
+                                        <div class="container-mobile " style="background-image: url(img/bg.jpg); ;">
                                             <div class="frame">
                                                 <img class="frame-tl animate__animated animate__fadeInTopLeft animate__slow" src="img/frame-tl.png" alt="frame">
                                                 <img class="frame-tr animate__animated animate__fadeInTopRight animate__slow" src="img/frame-tr.png" alt="frame">
@@ -324,17 +324,17 @@
             <img src="img/BS (119 of 508).jpg" style="width: 100%;height: 100%;object-fit: cover;" class="lightbox" draggable="false">
           </div>
       <div class="light image-editable animate__animated animate__zoomIn animate__slower" style="overflow: hidden;width: 100%;grid-column: span 2;">
-            <img src="img/BS (79 of 508).jpg" style="width: 100%;height: 100%;object-fit: cover;" class="lightbox" draggable="false">
+            <img src="https://github.com/ADANDWI/FaruqWinda/blob/main/img/BS%20(119%20of%20508).jpg" style="width: 100%;height: 100%;object-fit: cover;" class="lightbox" draggable="false">
           </div><div class="light image-editable animate__animated animate__zoomIn animate__slower" style="overflow: hidden;width: 100%;">
-            <img src="img/BS (230 of 508).jpg" style="width: 100%;height: 100%;object-fit: cover;" class="lightbox" draggable="false">
+            <img src="https://github.com/ADANDWI/FaruqWinda/blob/main/img/BS%20(230%20of%20508).jpg" style="width: 100%;height: 100%;object-fit: cover;" class="lightbox" draggable="false">
           </div><div class="light image-editable animate__animated animate__zoomIn animate__slower" style="overflow: hidden;width: 100%;">
-            <img src="img/BS (251 of 508).jpg" style="width: 100%;height: 100%;object-fit: cover;" class="lightbox" draggable="false">
+            <img src="https://github.com/ADANDWI/FaruqWinda/blob/main/img/BS%20(251%20of%20508).jpg" style="width: 100%;height: 100%;object-fit: cover;" class="lightbox" draggable="false">
           </div><div class="light image-editable animate__animated animate__zoomIn animate__slower" style="overflow: hidden;width: 100%;">
-            <img src="img/BS (257 of 318).jpg" style="width: 100%;height: 100%;object-fit: cover;" class="lightbox" draggable="false">
+            <img src="https://github.com/ADANDWI/FaruqWinda/blob/main/img/BS%20(257%20of%20318).jpg" style="width: 100%;height: 100%;object-fit: cover;" class="lightbox" draggable="false">
           </div><div class="light image-editable animate__animated animate__zoomIn animate__slower" style="overflow: hidden;width: 100%;grid-column: span 2;">
-            <img src="img/BS (291 of 318).jpg" style="width: 100%;height: 100%;object-fit: cover;" class="lightbox" draggable="false">
+            <img src="https://github.com/ADANDWI/FaruqWinda/blob/main/img/BS%20(291%20of%20318).jpg" style="width: 100%;height: 100%;object-fit: cover;" class="lightbox" draggable="false">
           </div><div class="light image-editable animate__animated animate__zoomIn animate__slower" style="overflow: hidden;width: 100%;">
-            <img src="img/BS (283 of 508).jpg" style="width: 100%;height: 100%;object-fit: cover;" class="lightbox" draggable="false">
+            <img src="https://github.com/ADANDWI/FaruqWinda/blob/main/img/BS%20(283%20of%20508).jpg" style="width: 100%;height: 100%;object-fit: cover;" class="lightbox" draggable="false">
           </div>
     </div>
   </div>
@@ -342,7 +342,7 @@
 </div>
  </li>
                                            <li class="satumomen_slide">
-                                        <div class="container-mobile " style="background-image: url(https://satumomen.com/themes/red-rustic/bg.jpg); ;">
+                                        <div class="container-mobile " style="background-image: url(img/bg.jpg); ;">
                                             <div class="frame">
                                                 <img class="frame-tl animate__animated animate__fadeInTopLeft animate__slow" src="img/frame-tl.png" alt="frame">
                                                 <img class="frame-tr animate__animated animate__fadeInTopRight animate__slow" src="img/frame-tr.png" alt="frame">
@@ -419,7 +419,7 @@
                                         </div>
                                     </li>
                                                                         <li class="satumomen_slide">
-                                        <div class="container-mobile " style="background-image: url(https://satumomen.com/themes/red-rustic/bg.jpg); ;">
+                                        <div class="container-mobile " style="background-image: url(img/bg.jpg); ;">
                                             <div class="frame">
                                                 <img class="frame-tl animate__animated animate__fadeInTopLeft animate__slow" src="img/frame-tl.png" alt="frame">
                                                 <img class="frame-tr animate__animated animate__fadeInTopRight animate__slow" src="img/frame-tr.png" alt="frame">
@@ -459,9 +459,9 @@
             Kirim ucapan untuk mempelai<br>dan konfirmasi kehadiran
           </div>
 
-          <a href="#disqusi"><button type="button" class="btn-rsvp btn btn-primary rounded-pill mb-4 animate__animated animate__fadeInUp animate__slow">
+          <button type="button" class="btn-rsvp btn btn-primary rounded-pill mb-4 animate__animated animate__fadeInUp animate__slow">
             Kirim Ucapan RSVP
-          </button></a>
+          </button>
         </div>
       </div>
     </div>
@@ -469,7 +469,7 @@
                                         </div>
                                     </li>
                                                                         <li class="satumomen_slide">
-                                        <div class="container-mobile " style="background-image: url(https://satumomen.com/themes/red-rustic/bg.jpg); ;">
+                                        <div class="container-mobile " style="background-image: url(img/bg.jpg); ;">
                                             <div class="frame">
                                                 <img class="frame-tl animate__animated animate__fadeInTopLeft animate__slow" src="img/frame-tl.png" alt="frame">
                                                 <img class="frame-tr animate__animated animate__fadeInTopRight animate__slow" src="img/frame-tr.png" alt="frame">
@@ -505,7 +505,7 @@
                                             <div class="d-flex justify-content-center align-items-center" style="height: 100%;">
                                     </li>
                                                                         <li class="satumomen_slide">
-                                        <div class="container-mobile " style="background-image: url(https://satumomen.com/themes/red-rustic/bg.jpg); ;">
+                                        <div class="container-mobile " style="background-image: url(img/bg.jpg); ;">
                                             <div class="frame">
                                                 <img class="frame-tl animate__animated animate__fadeInTopLeft animate__slow" src="img/frame-tl.png" alt="frame">
                                                 <img class="frame-tr animate__animated animate__fadeInTopRight animate__slow" src="img/frame-tr.png" alt="frame">
@@ -670,7 +670,7 @@
 }
 
 .btn-close {
-  position: absolute;
+
   top: 10px;
   right: 10px;
 }
@@ -706,27 +706,24 @@
         <div class="modal-content p-4">
             <!-- rsvp form -->
             <form id="myForm">
-                <div class="mb-3">
-                    <label for="nama" class="form-label">Nama:</label>
-                    <input type="text" class="form-control" id="nama" name="nama" required>
+                <div>
+                    <label for="nama">Nama:</label>
+                    <input type="text" id="nama" name="nama" required placeholder="Nama">
                 </div>
-                <div class="mb-3">
-                    <label for="alamat" class="form-label">Alamat:</label>
-                    <input type="text" class="form-control" id="alamat" name="alamat" required>
+                <div>
+                    <label for="alamat">Alamat:</label>
+                    <input type="text" id="alamat" name="alamat" required placeholder="Alamat">
                 </div>
-                <div class="mb-3">
-                    <label for="kehadiran" class="form-label">Kehadiran:</label>
-                    <select class="form-select" id="kehadiran" name="kehadiran" required>
-                        <option value="hadir">Hadir</option>
-                        <option value="tidak_hadir">Tidak Hadir</option>
-                        <option value="sakit">Sakit</option>
-                    </select>
+                <div>
+                    <label for="kehadiran">Keterangan Kehadiran:</label>
+                    <input id="kehadiran" name="kehadiran" required placeholder="Hadir,TidakHadir,Sakit">
+                </input>
                 </div>
-                <div class="mb-3">
-                    <label for="pesan" class="form-label">Kesan dan Pesan:</label>
-                    <textarea class="form-control" id="pesan" name="pesan" rows="4" required></textarea>
+                <div>
+                    <label for="pesan">KesanPesan:</label>
+                    <textarea id="pesan" name="pesan" rows="4" required placeholder="KesanPesan"></textarea>
                 </div>
-                <button type="submit" class="btn btn-troll">Submit</button>
+                <button type="submit">Submit</button>
             </form>
             <!-- rsvp form -->
             <button onclick="closeModal('rsvpModal')" type="button" class="btn btn-secondary btn-close" data-bs-dismiss="modal">
@@ -739,24 +736,44 @@
 </div>
 <!-- endRSVPModal -->
 <script>
-    function kirimData() {
-      var namaValue = document.getElementById("Nama").value.replace(/\s/g, "+");
-      var kelasValue = document.getElementById("Alamat").value.replace(/\s/g, "+");
-      var noHpValue = document.getElementById("Kehadiran").value.replace(/\s/g, "+");
-      var visiValue = document.getElementById("KesanPesan").value.replace(/\s/g, "+");
-      var formURL = "https://docs.google.com/forms/d/e/1FAIpQLSe1Jq4hq7EIfqOjkIdn6ur9JiXBB0Uxao9b7zZWSMhDtWXchA/viewform?usp=sf_link";
-      formURL += "&entry.1974313590=" + NamaValue;
-      formURL += "&entry.986576144=" + AlamatValue;
-      formURL += "&entry.1941511246=" + KehadiranValue;
-      formURL += "&entry.923789255=" + KesanPesanValue;
-      var xhr = new XMLHttpRequest();
-      xhr.open("POST", formURL, true);
-      xhr.send();
-      document.getElementById("Nama").value = '';
-      document.getElementById("Alamat").value = '';
-      document.getElementById("Kehadiran").value = '';
-      document.getElementById("KesanPesan").value = '';
-    }
+      document.getElementById("myForm").addEventListener("submit", function(event) {
+    event.preventDefault(); // Menghentikan perilaku default dari pengiriman formulir
+    kirimData(); // Panggil fungsi kirimData untuk mengirim data
+});
+
+function kirimData() {
+    var namaValue = document.getElementById("nama").value;
+    var alamatValue = document.getElementById("alamat").value;
+    var kehadiranValue = document.getElementById("kehadiran").value;
+    var pesanValue = document.getElementById("pesan").value;
+
+    var formURL = "https://docs.google.com/forms/d/e/1FAIpQLSe1Jq4hq7EIfqOjkIdn6ur9JiXBB0Uxao9b7zZWSMhDtWXchA/formResponse";
+    var formData = new URLSearchParams();
+    formData.append("entry.1068361835", namaValue);
+    formData.append("entry.265885842", alamatValue);
+    formData.append("entry.1596946670", kehadiranValue);
+    formData.append("entry.884479396", pesanValue);
+
+    fetch(formURL, {
+        method: "POST",
+        body: formData,
+        mode: "no-cors" // Set mode no-cors untuk menghindari kesalahan CORS
+    })
+    .then(function(response) {
+        // Tangani respons dari Google Forms di sini (misalnya, tampilkan pesan berhasil)
+        console.log("Data terkirim!");
+        // Setel nilai input menjadi kosong setelah mengirim
+        document.getElementById("nama").value = "";
+        document.getElementById("alamat").value = "";
+        document.getElementById("kehadiran").value = "";
+        document.getElementById("pesan").value = "";
+    })
+    .catch(function(error) {
+        console.error("Ada kesalahan:", error);
+        // Tangani kesalahan (misalnya, tampilkan pesan gagal)
+    });
+}
+
   </script>
         <!-- endRSVPModal -->
             </main>
