--- a/index.html
+++ b/index.html
@@ -11,13 +11,11 @@
         <title>Faruq Dan Winda</title>
     <meta name="title" content="Wedding &amp; Engagement  - Red Rustic">
     <meta name="description" content="">
-    <meta itemprop="image" content="https://satumomen.com/themes/red-rustic/red-rustic.jpg">
     <link rel="icon" type="image/x-icon" href="https://images.app.goo.gl/wEBbXYumBEsZ16Jv9">
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
     <meta property="og:title" content="Wedding &amp; Engagement  - Red Rustic">
     <meta property="og:description" content="">
-    <meta property="og:image" content="https://satumomen.com/themes/red-rustic/red-rustic.jpg">
 
         
     <script type="application/ld+json">
@@ -321,20 +319,20 @@
       </div>
       <div style="display: grid;grid-template-columns: repeat(3,1fr);gap: 4px;height: 60vh;">
         <div class="light image-editable animate__animated animate__zoomIn animate__slower" style="overflow: hidden;width: 100%;">
-            <img src="img/BS (119 of 508).jpg" style="width: 100%;height: 100%;object-fit: cover;" class="lightbox" draggable="false">
+            <img src="https://adandwi.github.io/FaruqWinda/img/BS%20(119%20of%20508).jpg" style="width: 100%;height: 100%;object-fit: cover;" class="lightbox" draggable="false">
           </div>
       <div class="light image-editable animate__animated animate__zoomIn animate__slower" style="overflow: hidden;width: 100%;grid-column: span 2;">
-            <img src="https://github.com/ADANDWI/FaruqWinda/blob/main/img/BS%20(119%20of%20508).jpg" style="width: 100%;height: 100%;object-fit: cover;" class="lightbox" draggable="false">
+            <img src="https://adandwi.github.io/FaruqWinda/img/BS%20(119%20of%20508).jpg" style="width: 100%;height: 100%;object-fit: cover;" class="lightbox" draggable="false">
           </div><div class="light image-editable animate__animated animate__zoomIn animate__slower" style="overflow: hidden;width: 100%;">
-            <img src="https://github.com/ADANDWI/FaruqWinda/blob/main/img/BS%20(230%20of%20508).jpg" style="width: 100%;height: 100%;object-fit: cover;" class="lightbox" draggable="false">
+            <img src="https://adandwi.github.io/FaruqWinda/img/BS%20(230%20of%20508).jpg" style="width: 100%;height: 100%;object-fit: cover;" class="lightbox" draggable="false">
           </div><div class="light image-editable animate__animated animate__zoomIn animate__slower" style="overflow: hidden;width: 100%;">
-            <img src="https://github.com/ADANDWI/FaruqWinda/blob/main/img/BS%20(251%20of%20508).jpg" style="width: 100%;height: 100%;object-fit: cover;" class="lightbox" draggable="false">
+            <img src="https://adandwi.github.io/FaruqWinda/img/BS%20(251%20of%20508).jpg" style="width: 100%;height: 100%;object-fit: cover;" class="lightbox" draggable="false">
           </div><div class="light image-editable animate__animated animate__zoomIn animate__slower" style="overflow: hidden;width: 100%;">
-            <img src="https://github.com/ADANDWI/FaruqWinda/blob/main/img/BS%20(257%20of%20318).jpg" style="width: 100%;height: 100%;object-fit: cover;" class="lightbox" draggable="false">
+            <img src="https://adandwi.github.io/FaruqWinda/img/BS%20(257%20of%20318).jpg" style="width: 100%;height: 100%;object-fit: cover;" class="lightbox" draggable="false">
           </div><div class="light image-editable animate__animated animate__zoomIn animate__slower" style="overflow: hidden;width: 100%;grid-column: span 2;">
-            <img src="https://github.com/ADANDWI/FaruqWinda/blob/main/img/BS%20(291%20of%20318).jpg" style="width: 100%;height: 100%;object-fit: cover;" class="lightbox" draggable="false">
+            <img src="https://adandwi.github.io/FaruqWinda/img/BS%20(291%20of%20318).jpg" style="width: 100%;height: 100%;object-fit: cover;" class="lightbox" draggable="false">
           </div><div class="light image-editable animate__animated animate__zoomIn animate__slower" style="overflow: hidden;width: 100%;">
-            <img src="https://github.com/ADANDWI/FaruqWinda/blob/main/img/BS%20(283%20of%20508).jpg" style="width: 100%;height: 100%;object-fit: cover;" class="lightbox" draggable="false">
+            <img src="https://adandwi.github.io/FaruqWinda/img/BS%20(283%20of%20508).jpg" style="width: 100%;height: 100%;object-fit: cover;" class="lightbox" draggable="false">
           </div>
     </div>
   </div>
