--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="google" content="notranslate"/>
         <title>Faruq Dan Winda</title>
     <meta name="description" content="">
-    <link rel="icon" type="image/x-icon" href="https://images.app.goo.gl/wEBbXYumBEsZ16Jv9">
+    <link rel="icon" type="image/x-icon" href="img/20240314_000507_0000-removebg-preview.png">
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
     <meta property="og:description" content="">
