--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@
     position: absolute;
     background-color: var(--inv-accent);
     transform: translateX(-17px) translateY(20px);
-"></span><div class="editable font-weight-bold mb-2" style="font-size: 14.4px;">First Meet (2016)</div><div class="editable quotes" style="font-size: 14.4px;">Kami bertemu pada April 2016 tepatnya saat kami kelas 8 Mts. Tidak ada yang pernah menyangka bahwa pertemuan itu akan membawa kami pada suatu ikatan suatu hari nanti.</div>
+"></span><div class="editable font-weight-bold mb-2" style="font-size: 14.4px;">First Meet (2016)</div><div class="editable quotes" style="font-size: 14.4px;">Kami bertemu pada April 2016 tepatnya saat kami kelas 8 Mts.</div>
         
       </div>
     <div class="text-left pl-3 mb-3 animate__animated animate__fadeInUp animate__slower" style="position: relative;">
@@ -344,7 +344,7 @@
     position: absolute;
     background-color: var(--inv-accent);
     transform: translateX(-17px) translateY(20px);
-"></span><div class="editable font-weight-bold mb-2" style="font-size: 14.4px;">Relationship (2016)</div><div class="editable quotes" style="font-size: 14.4px;">Singkat cerita, seiring berjalannya waktu kami terus berkomunikasi saling bertukar cerita dan berkeluh kesah ,dan sampai akhirnya kami berdua saling nyatakan perasaan dan berkomitmen untuk menjalani hubungan berpacaran </div>
+"></span><div class="editable font-weight-bold mb-2" style="font-size: 14.4px;">Relationship (2016)</div><div class="editable quotes" style="font-size: 14.4px;">Seiring berjalannya waktu kami terus berkomunikasi saling bertukar cerita dan sampai akhirnya kami berdua saling nyatakan perasaan </div>
         
       </div><div class="text-left pl-3 mb-3 animate__animated animate__fadeInUp animate__slower" style="position: relative;">
         <span style="
