--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
     <meta property="og:description" content="">
-
+    <meta property="og:image" content="https://adandwi.github.io/FaruqWinda/img/BS%20(224%20of%20508).jpg">
     <!-- css -->
     <link rel="stylesheet" href="animate.min.css">
     <link href="bootstrap.min.css" rel="stylesheet">
