--- a/index.html
+++ b/index.html
@@ -13,8 +13,11 @@
     <link rel="icon" type="image/x-icon" href="https://adandwi.github.io/FaruqWinda/img/20240314_000507_0000-removebg-preview.png">
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
+    <meta property="og:url" content="https://adandwi.github.io/FaruqWinda/">
+    <meta property="og:title" content="Wedding &amp; WindaFaruq">
     <meta property="og:description" content="">
     <meta property="og:image" content="https://adandwi.github.io/FaruqWinda/img/BS%20(224%20of%20508).jpg">
+
     <!-- css -->
     <link rel="stylesheet" href="animate.min.css">
     <link href="bootstrap.min.css" rel="stylesheet">
